# trading_simulation

./: .gitignore  CMakeLists.txt  Makefile  README.md  cpp_misc.code-workspace  main.cpp  main_v2  main_v2.cpp
include/: IStrategy.h  ITradingEngineAPI.h  ITradingListener.h  Market.h  Order.h  Portfolio.h  TradingEngine.h
src/: Market.cpp  MomentumStrategy.cpp  Order.cpp  Portfolio.cpp  TradingEngine.cpp  TradingEngineMCPAdapter.cpp
